improve styling, fix some font spacing issues

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -6,8 +6,11 @@ body {
 }
 
 h1 {
+  display: flex;
+  justify-content: center;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bolder;
+  font-size: 60px;
 }
 
 body {
@@ -53,4 +56,17 @@ body {
 }
 
 
+fieldset {
+  margin: 20px 20px auto;
+  border-radius: 15px;
+}
 
+#message {
+  display: flex;
+  justify-content: center;
+  font-size: 30px;
+}
+
+.button {
+  margin: 30px auto;
+}
